# OpenAdapter

./: CMakeLists.txt  README.md  util_usb.c
include/: GamecubeController.hpp  tusb_config.h  usb_definitions.h
kicad/: adaptor.kicad_pcb  adaptor.kicad_prl  adaptor.kicad_pro  fp-info-cache
src/: GamecubeController.cpp  main.cpp  usb_descriptors.cpp
